# SLAT

./: .Rprofile  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
benchmark/: .gitignore  README.md
benchmark/analysis/: 2d_vis_align.ipynb  3d_analysis.ipynb  aggr_datasets.ipynb  benchmark_analysis.ipynb  celltype_region_analysis.ipynb  check_MERFISH.ipynb  evluation_analysis.ipynb  hetero.ipynb  neighbor_celltype.ipynb  plot_confusion_matrix.ipynb  plot_keypoints.ipynb  scalability_analysis.ipynb  split_analysis.ipynb
benchmark/config/: config.yaml
benchmark/label_data/: DLPFC_label.ipynb  napari_label.ipynb  ploty_label.ipynb
benchmark/profiles/impetus/: config.yaml  impetus.yaml
benchmark/profiles/local/: config.yaml
benchmark/resource/paste2/: PASTE2.py  __init__.py  glmpca.py  helper.py  model_selection.py  projection.py
benchmark/workflow/: Snakefile  benchmark.smk  build_3d.smk  evaluation.smk  perturb.smk  split_data.smk  utils.py
benchmark/workflow/notebooks/: Seurat_metrics.ipynb  data_split.ipynb  edge_score.ipynb  emb2metrics.ipynb  emb2metrics_one2many.ipynb  get_metrics.ipynb  prepare_data.ipynb  run_Harmony.ipynb  run_PASTE.ipynb  run_PASTE2.ipynb  run_SLAT.ipynb  run_SLAT_dpca.ipynb  run_SLAT_dpca_one2many.ipynb  run_SLAT_harmony.ipynb  run_SLAT_noise.ipynb  run_SLAT_without_prematch.ipynb  run_STAGATE.ipynb  run_Seurat.ipynb
benchmark/workflow/rules/: data_prepare.smk  methods.smk  metrics.smk
benchmark/workflow/scripts/: summarize.py
case/: README.md
case/mouse_development/: Harmony.ipynb  PASTE.ipynb  STAGATE.ipynb  STAGATE_analysis.ipynb  Seurat.ipynb  Seurat_analysis.ipynb  baseline_Seurat.ipynb
case/spatial_cross_platform/other_methods/: harmony.ipynb  paste.ipynb  seurat.ipynb  stagate.ipynb
case/sptatial_multi-omics/: 1.1.ATAC_annotation.ipynb  1.2.ATAC_PeakCalling.ipynb  4.Joint_regulatory_infer.ipynb
case/sptatial_multi-omics/other_methods/: glue.ipynb  harmony.ipynb  paste.ipynb  plot.ipynb  quatify_analysis.ipynb  stagate.ipynb
case/visium_xenium/: Harmony.ipynb  STAGATE.ipynb  Seurat.ipynb  Volcano_plot.ipynb
data/: README.md  Stereo_process.ipynb
docs/: api.md  conf.py  credits.md  data.md  index.md  install.md  release.md  requirements.txt  tutorials.md  utils.py
docs/_static/: custom.css
docs/tutorials/: basic_usage.ipynb  pre_match.ipynb
env/: Dockerfile  README.md  environment.yml
env/PASTE/: Dockerfile
env/STAGATE/: Dockerfile
env/STAGATE_pyg/: Dockerfile
env/Seurat/: .Rprofile
evaluation/: .gitignore  README.md
evaluation/analysis/: hyperparameters_analysis.ipynb  noise_analysis.ipynb  plot_hyper.ipynb
evaluation/config/: config.yaml
evaluation/profiles/impetus/: config.yaml  impetus.yaml
evaluation/profiles/local/: config.yaml
evaluation/workflow/: LGCN.smk  Snakefile  hyperparam.smk  noise.smk  utils.py
evaluation/workflow/notebooks/: emb2metrics.ipynb  run_Harmony.ipynb  run_LGCN.ipynb  run_PASTE.ipynb  run_SLAT.ipynb  run_SLAT_noise.ipynb  run_STAGATE.ipynb  run_Seurat.ipynb  subsample.ipynb
evaluation/workflow/rules/: methods.smk  prepare_data.smk
evaluation/workflow/scripts/: summarize.py  utils.R
resource/: README.md
scSLAT/: __init__.py  metrics.py  utils.py
scSLAT/model/: __init__.py  batch.py  graphmodel.py  loaddata.py  preprocess.py  train.py  utils.py
scSLAT/model/graphconv/: __init__.py  combnet.py
scSLAT/model/prematch/: __init__.py  icp.py  utils.py
scSLAT/viz/: __init__.py  multi_dataset.py  single_dataset.py
