[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scSLAT"
packages = [{include = "scSLAT"}]
version = "0.2.0"
description = "A graph deep learning based tool to align single cell spatial omics data"
readme = "README.md"
license = "MIT"
authors = ["Chen-Rui Xia <xiachenrui@mail.cbi.pku.edu.cn>"]
keywords = ["bioinformatics", "graph-deep-learning", "single-cell", "spatial-omics", "alignment"]
homepage = "https://github.com/gao-lab/SLAT"
documentation = "https://slat.readthedocs.io/en/latest/"
repository = "https://github.com/gao-lab/SLAT"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">1.19"
scipy = ">1.3"
pandas = ">1.1"
matplotlib = ">3.1.2"
seaborn = ">0.9"
dill = ">0.2.3"
tqdm = ">4.27"
scikit-learn = ">0.21.2"
statsmodels = ">0.10"
parse = ">1.3.2"
anndata = ">0.7"
scanpy = ">1.5"
h5py = "*"
packaging = "*"
joblib = "*"
pyyaml = "*"
harmony-pytorch = "*"
harmonypy = "*"
plotly = "*"
faiss-cpu = "*"
pynvml = "*"
scikit-misc = "*"
leidenalg = "*"
opencv-python = "*"

torch = {version = "1.11.0", source="torch", optional = true}
torch-scatter = {version = "*", source="pyg", optional = true}
torch-sparse = {version = "*", source="pyg", optional = true}
torch-cluster = {version = "*", source="pyg", optional = true}
torch-geometric = {version = "*", source="pyg", optional = true}

sphinx = {version="*", optional = true}
sphinx-autodoc-typehints = {version="*", optional = true}
sphinx-copybutton = {version="*", optional = true}
sphinx-intl = {version="*", optional = true}
nbsphinx = {version="*", optional = true}
sphinx-rtd-theme = {version="*", optional = true}
sphinx_gallery = {version=">=0.8.2,<0.11", optional = true}
jinja2 = {version="*", optional = true}
myst-parser = {version="*", optional = true}

pytest = {version="*", optional = true}
pytest-cov = {version="*", optional = true}
papermill = {version="*", optional = true}
snakemake = {version="*", optional = true}
ipykernel = {version="*", optional = true}
ipython = {version="*", optional = true}
jupyter = {version="*", optional = true}

[tool.poetry.extras]
torch = ["torch"]
pyg = ["torch-geometric", "torch-cluster", "torch-sparse", "torch-scatter"]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-copybutton", "sphinx-intl", "nbsphinx", "sphinx-rtd-theme",
        "jinja2", "myst-parser", "pandoc", "ipykernel", "sphinx_gallery"]
dev = ["pytest", "pytest-cov", "papermill", "snakemake", "ipykernel", "ipython", "jupyter"]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu113"
secondary = false

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-1.11.0%2Bcu113.html"
secondary = false

[tool.pyright]
include = ["scSLAT"]
exclude = ["**/conda", "**/__pycache__", "**/.**"]
ignore = ["resource/"]