[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scSLAT"
packages = [{include = "scSLAT"}]
version = "0.2.1"
description = "A graph deep learning based tool to align single cell spatial omics data"
readme = "README.md"
license = "MIT"
authors = ["Chen-Rui Xia <xiachenrui@mail.cbi.pku.edu.cn>"]
keywords = ["bioinformatics", "deep-learning", "graph-neural-network", "single-cell", "spatial-omics"]
homepage = "https://github.com/gao-lab/SLAT"
documentation = "https://slat.readthedocs.io/en/latest/"
repository = "https://github.com/gao-lab/SLAT"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">1.19"
scipy = ">1.3"
pandas = ">1.1"
matplotlib = ">3.1.2,<3.7"
seaborn = ">0.9"
scikit-learn = ">0.21.2"
anndata = ">0.7"
scanpy = ">1.5"
h5py = "*"
leidenalg = "*"
packaging = "*"
joblib = "*"
pyyaml = "*"
plotly = "*"
faiss-cpu = "*"
pynvml = "*"
scikit-misc = "*"
opencv-python = "*"
ipykernel = "*"
nbformat = "*"

torch = {version = ">=2.0.0"}
torchvision = {version = "*"}
torchaudio = {version = "*"}
harmony-pytorch = {version = "*"}
torch-geometric = {version = ">=2.3.0"}

sphinx = {version="*", optional = true}
sphinx-autodoc-typehints = {version="*", optional = true}
sphinx-copybutton = {version="*", optional = true}
sphinx-intl = {version="*", optional = true}
nbsphinx = {version="*", optional = true}
sphinx-rtd-theme = {version="*", optional = true}
sphinx_gallery = {version=">=0.8.2,<0.11", optional = true}
jinja2 = {version="*", optional = true}
myst-parser = {version="*", optional = true}

pytest = {version="*", optional = true}
pytest-cov = {version="*", optional = true}
papermill = {version="*", optional = true}
ipython = {version="*", optional = true}
jupyter = {version="*", optional = true}

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-copybutton", "sphinx-intl", "nbsphinx", "sphinx-rtd-theme",
        "jinja2", "myst-parser", "pandoc", "sphinx_gallery"]
dev = ["pytest", "pytest-cov", "papermill", "ipython", "jupyter"]


[tool.pyright]
include = ["scSLAT"]
exclude = ["**/conda", "**/__pycache__", "**/.**"]
ignore = ["resource/"]